<?xml version="1.0"?>
<package format="2">
  <name>vrep_creative_bringup</name>
  <version>0.0.0</version>
  <description>The vrep_creative_bringup package</description>
  <maintainer email="linus@todo.todo">linus</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>urdf</depend>
  <exec_depend>vrep_creative_description</exec_depend>
</package>
