<?xml version="1.0"?>
<package format="2">
  <name>vrep_creative_cmd</name>
  <version>0.0.0</version>
  <description>The vrep_creative_cmd package</description>
  <maintainer email="linus@todo.todo">linus</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
