<?xml version="1.0"?>
<package format="2">
  <name>vrep_creative_stt</name>
  <version>0.0.0</version>
  <description>The vrep_creative_stt package</description>
  <maintainer email="linus@todo.todo">linus</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
