<?xml version="1.0"?>
<package format="2">
  <name>vrep_holonomic_teleop</name>
  <version>1.1.0</version>
  <description>
    Provides teleoperation using keyboard and xbox360 controller.
  </description>
  <license>BSD</license>
  <author>Jaehyun Lim</author>
  <author email="jaehyunlim@yonsei.ac.kr">Jaehyun Lim</author>
  <maintainer email="jaehyunlim@yonsei.ac.kr">Jaehyun Lim</maintainer>
  <url type="repository">https://github.com/MLCS-Yonsei/vrep_holonomic</url>
  <url type="bugtracker">https://github.com/MLCS-Yonsei/vrep_holonomic/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>
</package>
